src/main/java/ca/sqlpower/wabit/parser/SQLANTLRParser.java
// $ANTLR 3.0.1 /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g 2008-10-20 11:21:23

package ca.sqlpower.wabit.parser;


import java.util.HashMap;
import java.util.List;

import org.antlr.runtime.ANTLRFileStream;
import org.antlr.runtime.BaseRecognizer;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.CommonTokenStream;
import org.antlr.runtime.DFA;
import org.antlr.runtime.EarlyExitException;
import org.antlr.runtime.IntStream;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.TokenStream;
public class SQLANTLRParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PLUS", "MINUS", "STAR", "DIV", "GT", "LT", "DOT", "PCT", "EQ", "HAT", "GE", "LE", "SELECT", "VALUES", "DEFAULT", "DISTINCT", "ON", "ALL", "AS", "INTO", "TEMPORARY", "TEMP", "LOCAL", "GLOBAL", "TABLE", "OLD", "NEW", "FROM", "CROSS", "JOIN", "NATURAL", "FULL", "LEFT", "RIGHT", "INNER", "OUTER", "USING", "ONLY", "VARIADIC", "AVG", "COUNT", "FIRST", "LAST", "MAX", "MIN", "NVL", "SUM", "UCASE", "LCASE", "MID", "LEN", "ROUND", "NOW", "FORMAT", "AND", "OR", "LIKE", "NOT", "ILIKE", "SIMILAR", "TO", "EXISTS", "ARRAY", "QUOTEDSTRING", "WHERE", "GROUP", "BY", "HAVING", "ORDER", "DESC", "ASC", "LIMIT", "NUMBER", "OFFSET", "ID", "WHITESPACE", "QUOTEID", "DIGIT", "LETTER", "SL_COMMENT", "ML_COMMENT", "';'", "'('", "')'", "','"
    };
    public static final int WHERE=68;
    public static final int LT=9;
    public static final int STAR=6;
    public static final int INNER=38;
    public static final int ORDER=72;
    public static final int LETTER=82;
    public static final int LIMIT=75;
    public static final int ONLY=41;
    public static final int ILIKE=62;
    public static final int LCASE=52;
    public static final int NEW=30;
    public static final int MAX=47;
    public static final int TABLE=28;
    public static final int NOW=56;
    public static final int COUNT=44;
    public static final int NOT=61;
    public static final int ID=78;
    public static final int AND=58;
    public static final int SUM=50;
    public static final int EOF=-1;
    public static final int CROSS=32;
    public static final int HAT=13;
    public static final int ML_COMMENT=84;
    public static final int AS=22;
    public static final int FULL=35;
    public static final int QUOTEID=80;
    public static final int USING=40;
    public static final int OFFSET=77;
    public static final int LEFT=36;
    public static final int AVG=43;
    public static final int VARIADIC=42;
    public static final int ALL=21;
    public static final int NVL=49;
    public static final int PLUS=4;
    public static final int DIGIT=81;
    public static final int EXISTS=65;
    public static final int LAST=46;
    public static final int EQ=12;
    public static final int DOT=10;
    public static final int SELECT=16;
    public static final int INTO=23;
    public static final int ARRAY=66;
    public static final int LIKE=60;
    public static final int QUOTEDSTRING=67;
    public static final int OUTER=39;
    public static final int BY=70;
    public static final int GE=14;
    public static final int ASC=74;
    public static final int TO=64;
    public static final int TEMP=25;
    public static final int MID=53;
    public static final int DEFAULT=18;
    public static final int NUMBER=76;
    public static final int VALUES=17;
    public static final int ON=20;
    public static final int OLD=29;
    public static final int WHITESPACE=79;
    public static final int RIGHT=37;
    public static final int HAVING=71;
    public static final int MIN=48;
    public static final int MINUS=5;
    public static final int LOCAL=26;
    public static final int JOIN=33;
    public static final int SIMILAR=63;
    public static final int UCASE=51;
    public static final int GROUP=69;
    public static final int SL_COMMENT=83;
    public static final int OR=59;
    public static final int ROUND=55;
    public static final int LEN=54;
    public static final int GT=8;
    public static final int FORMAT=57;
    public static final int PCT=11;
    public static final int NATURAL=34;
    public static final int DESC=73;
    public static final int DIV=7;
    public static final int GLOBAL=27;
    public static final int FROM=31;
    public static final int DISTINCT=19;
    public static final int TEMPORARY=24;
    public static final int LE=15;
    public static final int FIRST=45;

        public SQLANTLRParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[56+1];
         }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g"; }

     
        public static void main(String[] args) throws Exception {
            SQLANTLRLexer lex = new SQLANTLRLexer(new ANTLRFileStream(args[0]));
           	CommonTokenStream tokens = new CommonTokenStream(lex);	
    	List listTokens = tokens.getTokens();
    	
    		
    	SQLANTLRParser parser = new SQLANTLRParser(tokens);
            try {
                parser.stmtblock();
            } catch (RecognitionException e)  {
                e.printStackTrace();
            }
        }       



    // $ANTLR start stmtblock
    // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:61:1: stmtblock : stmtmulti ;
    public final void stmtblock() throws RecognitionException {
        try {
            // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:61:11: ( stmtmulti )
            // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:61:13: stmtmulti
            {
            pushFollow(FOLLOW_stmtmulti_in_stmtblock180);
            stmtmulti();
            _fsp--;
            if (failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end stmtblock


    // $ANTLR start stmtmulti
    // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:64:1: stmtmulti : ( select ) ( ';' select )* ( ';' )? ;
    public final void stmtmulti() throws RecognitionException {
        try {
            // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:64:11: ( ( select ) ( ';' select )* ( ';' )? )
            // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:64:13: ( select ) ( ';' select )* ( ';' )?
            {
            // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:64:13: ( select )
            // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:64:14: select
            {
            pushFollow(FOLLOW_select_in_stmtmulti193);
            select();
            _fsp--;
            if (failed) return ;

            }

            // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:64:22: ( ';' select )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==85) ) {
                    int LA1_1 = input.LA(2);

                    if ( ((LA1_1>=SELECT && LA1_1<=VALUES)||LA1_1==86) ) {
                        alt1=1;
                    }


                }


                switch (alt1) {
            	case 1 :
            	    // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:64:23: ';' select
            	    {
            	    match(input,85,FOLLOW_85_in_stmtmulti197); if (failed) return ;
            	    pushFollow(FOLLOW_select_in_stmtmulti199);
            	    select();
            	    _fsp--;
            	    if (failed) return ;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:64:36: ( ';' )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==85) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:64:37: ';'
                    {
                    match(input,85,FOLLOW_85_in_stmtmulti204); if (failed) return ;

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end stmtmulti


    // $ANTLR start select
    // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:67:1: select : ( select_no_parens | select_with_parens );
    public final void select() throws RecognitionException {
        try {
            // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:67:12: ( select_no_parens | select_with_parens )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=SELECT && LA3_0<=VALUES)) ) {
                alt3=1;
            }
            else if ( (LA3_0==86) ) {
                alt3=2;
            }
            else {
                if (backtracking>0) {failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("67:1: select : ( select_no_parens | select_with_parens );", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:67:14: select_no_parens
                    {
                    pushFollow(FOLLOW_select_no_parens_in_select221);
                    select_no_parens();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 2 :
                    // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:68:5: select_with_parens
                    {
                    pushFollow(FOLLOW_select_with_parens_in_select228);
                    select_with_parens();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end select


    // $ANTLR start select_with_parens
    // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:71:1: select_with_parens : ( '(' select_no_parens ')' | '(' select_with_parens ')' );
    public final void select_with_parens() throws RecognitionException {
        try {
            // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:71:20: ( '(' select_no_parens ')' | '(' select_with_parens ')' )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==86) ) {
                int LA4_1 = input.LA(2);

                if ( ((LA4_1>=SELECT && LA4_1<=VALUES)) ) {
                    alt4=1;
                }
                else if ( (LA4_1==86) ) {
                    alt4=2;
                }
                else {
                    if (backtracking>0) {failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("71:1: select_with_parens : ( '(' select_no_parens ')' | '(' select_with_parens ')' );", 4, 1, input);

                    throw nvae;
                }
            }
            else {
                if (backtracking>0) {failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("71:1: select_with_parens : ( '(' select_no_parens ')' | '(' select_with_parens ')' );", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:71:22: '(' select_no_parens ')'
                    {
                    match(input,86,FOLLOW_86_in_select_with_parens240); if (failed) return ;
                    pushFollow(FOLLOW_select_no_parens_in_select_with_parens242);
                    select_no_parens();
                    _fsp--;
                    if (failed) return ;
                    match(input,87,FOLLOW_87_in_select_with_parens244); if (failed) return ;

                    }
                    break;
                case 2 :
                    // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:72:6: '(' select_with_parens ')'
                    {
                    match(input,86,FOLLOW_86_in_select_with_parens252); if (failed) return ;
                    pushFollow(FOLLOW_select_with_parens_in_select_with_parens254);
                    select_with_parens();
                    _fsp--;
                    if (failed) return ;
                    match(input,87,FOLLOW_87_in_select_with_parens256); if (failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end select_with_parens


    // $ANTLR start select_no_parens
    // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:75:1: select_no_parens : ( SELECT opt_distinct target_list into_clause from_clause where_clause groupby_clause having_clause orderby_clause opt_limit | values_clause );
    public final void select_no_parens() throws RecognitionException {
        try {
            // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:75:17: ( SELECT opt_distinct target_list into_clause from_clause where_clause groupby_clause having_clause orderby_clause opt_limit | values_clause )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==SELECT) ) {
                alt5=1;
            }
            else if ( (LA5_0==VALUES) ) {
                alt5=2;
            }
            else {
                if (backtracking>0) {failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("75:1: select_no_parens : ( SELECT opt_distinct target_list into_clause from_clause where_clause groupby_clause having_clause orderby_clause opt_limit | values_clause );", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:75:19: SELECT opt_distinct target_list into_clause from_clause where_clause groupby_clause having_clause orderby_clause opt_limit
                    {
                    match(input,SELECT,FOLLOW_SELECT_in_select_no_parens268); if (failed) return ;
                    pushFollow(FOLLOW_opt_distinct_in_select_no_parens270);
                    opt_distinct();
                    _fsp--;
                    if (failed) return ;
                    pushFollow(FOLLOW_target_list_in_select_no_parens272);
                    target_list();
                    _fsp--;
                    if (failed) return ;
                    pushFollow(FOLLOW_into_clause_in_select_no_parens274);
                    into_clause();
                    _fsp--;
                    if (failed) return ;
                    pushFollow(FOLLOW_from_clause_in_select_no_parens276);
                    from_clause();
                    _fsp--;
                    if (failed) return ;
                    pushFollow(FOLLOW_where_clause_in_select_no_parens278);
                    where_clause();
                    _fsp--;
                    if (failed) return ;
                    pushFollow(FOLLOW_groupby_clause_in_select_no_parens280);
                    groupby_clause();
                    _fsp--;
                    if (failed) return ;
                    pushFollow(FOLLOW_having_clause_in_select_no_parens282);
                    having_clause();
                    _fsp--;
                    if (failed) return ;
                    pushFollow(FOLLOW_orderby_clause_in_select_no_parens284);
                    orderby_clause();
                    _fsp--;
                    if (failed) return ;
                    pushFollow(FOLLOW_opt_limit_in_select_no_parens286);
                    opt_limit();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 2 :
                    // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:76:5: values_clause
                    {
                    pushFollow(FOLLOW_values_clause_in_select_no_parens293);
                    values_clause();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end select_no_parens


    // $ANTLR start values_clause
    // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:79:1: values_clause : VALUES '(' values_expr_list ')' ( ',' '(' values_expr_list ')' )* ;
    public final void values_clause() throws RecognitionException {
        try {
            // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:79:16: ( VALUES '(' values_expr_list ')' ( ',' '(' values_expr_list ')' )* )
            // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:79:18: VALUES '(' values_expr_list ')' ( ',' '(' values_expr_list ')' )*
            {
            match(input,VALUES,FOLLOW_VALUES_in_values_clause308); if (failed) return ;
            match(input,86,FOLLOW_86_in_values_clause310); if (failed) return ;
            pushFollow(FOLLOW_values_expr_list_in_values_clause312);
            values_expr_list();
            _fsp--;
            if (failed) return ;
            match(input,87,FOLLOW_87_in_values_clause314); if (failed) return ;
            // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:79:50: ( ',' '(' values_expr_list ')' )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==88) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /home/jeffrey/workspace/wabit/src/main/antlr/ca/sqlpower/wabit/parser/SQLANTLR.g:79:51: ',' '(' values_expr_list ')'
            	    {
            	    match(input,88,FOLLOW_88_in_values_clause317); if (failed) return ;
            	    match(input,86,FOLLOW_86_in_values_clause319); if (failed) return ;
            	    pushFollow(FOLLOW_values_expr_list_in_values_clause321);
            	    values_expr_list();
            	    _fsp--;
            	    if (failed) return ;
            	    match(input,87,FOLLOW_87_in_values_clause323); if (failed) return ;

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end values_clause

